deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feriado-cantina-frontend
  namespace: feriado-cantina
  labels:
    app: feriado-cantina-frontend
spec:
  replicas: 1 # Or your desired number of replicas
  selector:
    matchLabels:
      app: feriado-cantina-frontend
  strategy: # Add a strategy for rolling updates
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0 # Max number of pods that can be unavailable during the update
      maxSurge: 1

  template:
    metadata:
      labels:
        app: feriado-cantina-frontend
    spec:
      containers:
      - name: feriado-cantina-container
        image: "<IMAGE_FRONTEND>"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # Next.js default port
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            cpu: "10m"
            memory: "150Mi"
          limits:
            cpu: "50m"
            memory: "512Mi"
