service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feriado-cantina-service # Name for the service object
spec:
  selector:
    app: feriado-cantina-frontend  # MUST match the 'app' label in deployment.yaml template.metadata.labels
  ports:
    - protocol: TCP
      port: 80       # Port the Load Balancer listens on externally
      targetPort: 3000 # Port your container listens on (must match containerPort in deployment.yaml)
  type: ClusterIP # Creates an external Google Cloud Load Balancer
