ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feriado-cantina-preprod-ingress
  namespace: feriado-cantina
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https-redirect"
    networking.gke.io/managed-certificates: "feriado-cantina-preprod-managed-cert" # Define the ManagedCertificate name
spec:
  rules:
  # Regla para el host de preproducción de Feriado Cantina
  - host: feriadocantina.preprod.rayapp.io
    http:
      paths:
      # Ruta por defecto para todo el tráfico en este host (frontend)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feriado-cantina-service
            port:
              number: 80 # Asegúrate de que sea el puerto correcto de tu servicio frontend para el Ingress
